--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "should": "~1.2.2",
     "matchdep": "~0.1.2",
     "mocha-cakes": "~0.9.0",
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "grunt-contrib-copy": "~0.5.0"
   },
   "keywords": [],
   "dependencies": {
