--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-coffeelint": "~0.0.7",
     "grunt-simple-mocha": "~0.4.0",
+    "grunt-contrib-copy": "~0.5.0",
     "should": "~1.2.2",
     "matchdep": "~0.1.2",
     "mocha-cakes": "~0.9.0",
-    "grunt": "~0.4.5",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt": "~0.4.5"
   },
   "keywords": [],
   "dependencies": {
     "htmlparser2": "~3.7.3",
     "request": "~2.38.0",
-    "nock": "~0.42.1"
+    "nock": "~0.42.1",
+    "passport-facebook-canvas": "0.0.3"
   }
 }
