--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "htmlparser2": "~3.7.3",
     "request": "~2.38.0",
     "nock": "~0.42.1",
-    "passport-facebook-canvas": "0.0.3"
+    "passport-facebook-canvas": "0.0.3",
+    "jsdom": "~0.11.1"
   }
 }
